<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ao.allon</groupId>
        <artifactId>kubata</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>kubata-admin</artifactId>
    <packaging>jar</packaging>
    <name>Kubata Administrator</name>
    <description>Módulo central de administração empresarial</description>

    <dependencies>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-core</artifactId>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-inventario</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-vendas</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-compras</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-financeiro</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-contabilidade</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ao.allon</groupId>
            <artifactId>kubata-fiscal</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.pixelduke</groupId>
            <artifactId>transit</artifactId>
            <version>${transit.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.jfxtras</groupId>
            <artifactId>jfxtras-controls</artifactId>
            <version>17-r1</version>
        </dependency>

        <dependency>
            <groupId>org.jfxtras</groupId>
            <artifactId>jmetro</artifactId>
            <version>${jmetro.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-feather-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>12.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.0.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
            <version>6.4.4.Final</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>ao.allon.kubata.admin.MainLauncher</mainClass>
                    <includeSystemScope>true</includeSystemScope>
                    <skip>false</skip>
                    <fork>false</fork>
                    <start-class>ao.allon.kubata.admin.KubataAdminApplication</start-class>
                    <jvmArguments>
                        --add-opens javafx.graphics/javafx.scene=ALL-UNNAMED
                        --add-opens javafx.base/javafx.collections=ALL-UNNAMED
                        --add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED
                        --add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED
                        --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                        --add-opens javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
                        --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
                        --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
